fix .tyk-button next to other elements alignment

--- a/src/components/Toggle/sass/Toggle.scss
+++ b/src/components/Toggle/sass/Toggle.scss
@@ -33,7 +33,7 @@
   + .tyk-button,
   + .tyk-dropdown,
   + .tyk-toggle {
-    margin-right: 10px
+    margin-left: 10px
   }
 
   &--disabled-true {
